Tweak collection error page, fix z-index issue with selection box, remove localhost link.

--- a/src/genomes/selection/styles.css
+++ b/src/genomes/selection/styles.css
@@ -9,6 +9,7 @@
 .wgsa-selection-summary {
   position: fixed;
   right: 16px;
+  z-index: 1;
 }
 
 .mdl-layout:not(.user-drawer-visible) .wgsa-selection-summary {
